# comfyui-deforum-x-flux-nodes

./: CHANGELOG.md  CONTRIBUTING.md  CORRECTED_NODES_SUMMARY.md  EXAMPLES.md  INSTALLATION.md  LICENSE  PROMOTIONAL_CONTENT.md  README.md  RELEASE_NOTES_v1.0.0.md  WORKFLOW_EXPLANATION.md  __init__.py  nodes.py  publish_to_github.sh  pyproject.toml  requirements.txt  setup.py  test_nodes_simple.py
tests/: __init__.py  test_standalone.py
workflows/: corrected_workflow_fixed.json
