[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-deforum-x-flux-nodes"
version = "1.0.0"
description = "Professional video animation nodes for ComfyUI based on Deforum-X-Flux research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MCP Multi-Agent Framework", email = "contact@example.com"}
]
maintainers = [
    {name = "MCP Multi-Agent Framework", email = "contact@example.com"}
]
keywords = [
    "comfyui",
    "deforum", 
    "flux",
    "animation",
    "video-generation",
    "ai",
    "machine-learning",
    "computer-vision"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "Pillow>=8.0.0",
    "pandas>=1.3.0",
    "numexpr>=2.8.0"
]

[project.optional-dependencies]
video = [
    "ffmpeg-python>=0.2.0"
]
flux = [
    "transformers>=4.20.0",
    "diffusers>=0.20.0",
    "einops>=0.6.0"
]
3d = [
    "pytorch3d>=0.7.0"
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.991"
]
all = [
    "comfyui-deforum-x-flux-nodes[video,flux,3d]"
]

[project.urls]
Homepage = "https://github.com/A043-studios/comfyui-deforum-x-flux-nodes"
Documentation = "https://github.com/A043-studios/comfyui-deforum-x-flux-nodes/blob/main/README.md"
Repository = "https://github.com/A043-studios/comfyui-deforum-x-flux-nodes"
Issues = "https://github.com/A043-studios/comfyui-deforum-x-flux-nodes/issues"
Changelog = "https://github.com/A043-studios/comfyui-deforum-x-flux-nodes/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["comfyui_deforum_x_flux_nodes"]

[tool.setuptools.package-dir]
comfyui_deforum_x_flux_nodes = "."

[tool.setuptools.package-data]
comfyui_deforum_x_flux_nodes = [
    "*.py",
    "*.md",
    "*.txt",
    "*.json",
    "workflows/*.json",
    "web/**/*"
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs"
]
